k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: fastapi.local
    http:
      paths:
      - path: /accounts
        pathType: Prefix
        backend:
          service:
            name: accounts-service
            port:
              number: 80
      - path: /blog/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blog-service
            port:
              number: 80
